# sheep_vision

./: .gitignore  BATCH_ANALYSIS_PLAN.md  CHANGELOG_SCRIPTS.md  CONTRIBUTING.md  OUTPUT_DIRECTORY_STRUCTURE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_CN.md  RECOVER_DATASET.md  RUN_BATCH_ANALYSIS.md  TIME_ESTIMATE.md  compare_detection_tracking.py  debug_tracking_class.py  mkdocs.yaml  pyproject.toml  pytest.ini  test_detection.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: publish-docs.yml  publish-pre-release.yml  publish-release.yml  test-doc.yml
data/: README.md
dataset/: README.md
docs/: Anchor机制详解.md  CNAME  index.md  pig_counting_results_guide.md  中文使用指南.md  目标检测算法发展历程与RF-DETR策略.md
docs/guides/: ANALYSIS_COMMANDS.md  DATASET_TRAINING_GUIDE.md  IMPROVEMENT_ROADMAP.md  README_WSL_WINDOWS.md  SCRIPTS_USAGE.md  TEST_AND_EVALUATE.md  TRAINING_METRICS_EXPLAINED.md  TRAINING_TROUBLESHOOTING.md
docs/learn/: benchmarks.md  deploy.md  pretrained.md  train.md
docs/learn/run/: detection.md  segmentation.md
docs/learn/train/: index.md
docs/reference/: medium.md  rfdetr.md  small.md
docs/theme/partials/: header.html
docs/tutorials/: index.md
rfdetr/: __init__.py  config.py  detr.py  engine.py  inf.py  main.py  test_early_stopping.py
rfdetr/cli/: main.py
rfdetr/datasets/: coco.py  coco_eval.py  o365.py  transforms.py
rfdetr/deploy/: benchmark.py  export.py
rfdetr/deploy/_onnx/: optimizer.py  (+1 more)
rfdetr/models/: __init__.py  attention.py  lwdetr.py  matcher.py  position_encoding.py  transformer.py
rfdetr/test_output/: log.txt
rfdetr/util/: early_stopping.py  metrics.py  misc.py  utils.py
rfdetr_deepsort/: COMPARISON.md  IMPROVEMENTS.md  OVERLAP_HANDLING.md  README.md  simple_tracker.py  simple_tracker_improved.py
scripts/: analyze_video.py  batch_analyze_all_dates.py  batch_analyze_by_date.py  batch_analyze_folders.sh  evaluate_model.py  generate_time_table.py  merge_datasets.py  mount_f_drive.sh  prepare_dataset.py  quick_start.sh  quick_test.py  save_finetuned_model.sh  start_training.sh  test_dataset.py  test_model.py  train.py  train_optimized.py
tests/: __init__.py  conftest.py  test_batch_inference.py  test_integration.py  test_model_basic.py  test_training.py  test_utils.py
(+5 files in other folders)
